# json-utils

.github/workflows/: haskell.yml
json-api/: CHANGELOG.md  README.md  Setup.hs  json-api.cabal  stack.yaml
json-api/benchmarks/: bench.hs
json-api/src/Data/Aeson/: JsonApi.hs
json-api/tests/: doctests.hs
json-pointer/: CHANGELOG.md  json-pointer.cabal
json-pointy/: CHANGELOG.md  LICENSE  README.md  json-pointy.cabal  stack.yaml
json-pointy/src/Data/Aeson/: Pointer.hs
json-pointy/tests/: doctests.hs
