name:                json-pointy
version:             0.0.0.1
license:             BSD3
license-file:        LICENSE
stability:           experimental
author:              Ian Duncan
maintainer:          Ian Duncan <ian@iankduncan.com>
homepage:            https://github.com/iand675/json-pointer
bug-reports:         https://github.com/iand675/json-pointer/issues
category:            Development
copyright:           Copyrigh (C) 2016 Ian Duncan
tested-with:         GHC == 7.10.3
synopsis:            Cool synopsis here
description:         Cool description here
cabal-version:       >= 1.8

extra-source-files:
  .gitignore
  examples/LICENSE
  examples/json-pointer-examples.cabal
  examples/*.hs
  images/*.png
  HLint.hs
  CHANGELOG.md
  README.md
  SUPPORT.md

source-repository head
  type: git
  location: https://github.com/iand675/json-utils.git

library
  build-depends:
    base                  >= 4.5      && < 5,
    text                  >= 0.11     && < 1.3,
    bytestring            >= 0.9.1.10 && < 0.11,
    unordered-containers  >= 0.2.4    && < 0.3,
    vector                >= 0.5      && < 1,
    mtl                   >= 2.0.1    && < 2.3,
    aeson,
    attoparsec,
    lens
  exposed-modules:
    Data.Aeson.Pointer
  ghc-options: -Wall -fwarn-tabs -O2 -fdicts-cheap -funbox-strict-fields -fmax-simplifier-iterations=10
  hs-source-dirs: src

test-suite tests
  type:           exitcode-stdio-1.0
  main-is:        tests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  build-depends:
    base,
    text,
    bytestring,
    containers,
    hashable,
    unordered-containers,
    vector,
    mtl,
    tasty,
    tasty-hunit,
    tasty-discover

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  build-depends:
    base,
    text,
    bytestring,
    containers,
    hashable,
    unordered-containers,
    vector,
    mtl,
    doctest,
    filepath,
    directory

benchmark bench
  type:           exitcode-stdio-1.0
  main-is:        bench.hs
  ghc-options:    -Wall -O2 -threaded -fdicts-cheap -funbox-strict-fields
  hs-source-dirs: benchmarks
  build-depends:
    base,
    criterion,
    deepseq,
    mtl,
    json-pointer
